--- a/mainWindow.ui
+++ b/mainWindow.ui
@@ -6,18 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>538</width>
-    <height>347</height>
+    <width>597</width>
+    <height>369</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>EVE Ratting Tools</string>
   </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>170</x>
       <y>0</y>
       <width>271</width>
       <height>51</height>
@@ -45,7 +48,7 @@
       <x>0</x>
       <y>50</y>
       <width>191</width>
-      <height>181</height>
+      <height>201</height>
      </rect>
     </property>
     <property name="title">
@@ -253,24 +256,55 @@
    <widget class="QProgressBar" name="progressBar">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>281</y>
-      <width>541</width>
-      <height>20</height>
+      <x>10</x>
+      <y>300</y>
+      <width>581</width>
+      <height>21</height>
      </rect>
+    </property>
+    <property name="locale">
+     <locale language="English" country="UnitedStates"/>
     </property>
     <property name="value">
      <number>0</number>
+    </property>
+    <property name="textVisible">
+     <bool>true</bool>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+    <property name="invertedAppearance">
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>70</y>
-      <width>331</width>
-      <height>161</height>
+      <y>60</y>
+      <width>391</width>
+      <height>191</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+   </widget>
+   <widget class="QGroupBox" name="groupBox_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>250</y>
+      <width>591</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Graphic Command</string>
     </property>
    </widget>
   </widget>
@@ -279,20 +313,39 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>538</width>
+     <width>597</width>
      <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="locale">
+     <locale language="English" country="UnitedStates"/>
+    </property>
     <property name="title">
      <string>Menu</string>
     </property>
-    <addaction name="actionChange_Daily_Goals"/>
+    <addaction name="actionSettins"/>
     <addaction name="actionResearch_active_log"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
+   <widget class="QMenu" name="menuAbout">
+    <property name="locale">
+     <locale language="English" country="UnitedStates"/>
+    </property>
+    <property name="title">
+     <string>About</string>
+    </property>
+    <addaction name="actionAbout"/>
+   </widget>
    <addaction name="menuMenu"/>
+   <addaction name="menuAbout"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionResearch_active_log">
@@ -305,9 +358,19 @@
     <string>Exit</string>
    </property>
   </action>
-  <action name="actionChange_Daily_Goals">
+  <action name="actionSettins">
    <property name="text">
-    <string>Change Daily Goals</string>
+    <string>Settings</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About</string>
+   </property>
+  </action>
+  <action name="actionDonate">
+   <property name="text">
+    <string>Donate</string>
    </property>
   </action>
  </widget>
@@ -361,9 +424,27 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionSettins</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>showSettings()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>298</x>
+     <y>184</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>startCount()</slot>
   <slot>stopCount()</slot>
+  <slot>showAbout()</slot>
+  <slot>showSettings()</slot>
  </slots>
 </ui>
