--- a/mainWindow.ui
+++ b/mainWindow.ui
@@ -249,7 +249,7 @@
       <string notr="true">color: rgb(255, 0, 0);</string>
      </property>
      <property name="text">
-      <string>0</string>
+      <string>100000000</string>
      </property>
     </widget>
    </widget>
